# sally

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .npmrc  BUG_FIX_INACTIVE_OWNER.md  CAPROVER_SEED_DEPLOYMENT.md  CAPROVER_STEPS.md  CLAUDE.md  DEPLOY.md  DEPLOYMENT_STATUS.md  DISTANCE_CALCULATION_COMPLETE.md  DOCUMENTATION.md  DYNAMIC_UPDATES_GUIDE.md  Dockerfile  FEATURE_FLAGS_VERIFICATION.md  FINAL_IMPLEMENTATION_SUMMARY.md  FRESH_MIGRATION_INSTRUCTIONS.md  FRONTEND_NAVIGATION_UPDATE.md  GOOGLE_MAPS_QUICKSTART.md  HOME_PAGE_NAVIGATION_FIX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_DEPLOYMENT_READY.md  LOCAL_TEST_RESULTS.md  MIGRATION_COMPLETE.md  MIGRATION_COMPLETED.md  NAVIGATION_FLOW_DIAGRAM.md  NAVIGATION_LAYOUT_UPDATE.md  NAVIGATION_QUICK_REFERENCE.md  NAVIGATION_REDESIGN_SUMMARY.md  NAVIGATION_TESTING_GUIDE.md  NEXTJS_ROUTING_REFACTOR.md  PRODUCTION_SEED_SUMMARY.md  QUICKSTART.md  QUICK_MANUAL_SEED.md  QUICK_REFERENCE.md  README.md  SETUP.md  TESTING_CHECKLIST.md  (+16 more)
apps/backend/: .dockerignore  .env.example  .gitignore  DB_SETUP.md  Dockerfile  Dockerfile.optimized  EMAIL_SETUP.md  MIGRATION_GUIDE.md  QUICK_START.md  README.md  SEED_CAPROVER.md  alembic.ini  docker-entrypoint-nomigrate.sh  docker-entrypoint.sh  eslint.config.mjs  firebase-admin-sdk.json  nest-cli.json  package.json  prisma.config.ts  pyproject.toml  tsconfig.build.json  tsconfig.build.tsbuildinfo  tsconfig.json
apps/backend/app/: main.py
apps/backend/app/api/v1/: router.py
apps/backend/app/core/: __init__.py  constants.py  exceptions.py
apps/backend/app/db/: base.py  database.py
apps/backend/app/middleware/: logging.py
apps/backend/app/models/: __init__.py  driver.py  event.py  recommendation.py  route.py  route_plan.py  route_plan_update.py  route_segment.py  vehicle.py
apps/backend/app/services/: dynamic_update_handler.py  fuel_stop_optimizer.py  hos_rule_engine.py  prediction_engine.py  rest_optimization.py
apps/backend/app/utils/: cache.py  validators.py
apps/backend/prisma/: prisma.config.js  prisma.config.ts  schema.prisma  seed.ts
apps/backend/prisma/seeds/: 01-super-admin.seed.ts  02-feature-flags.seed.ts  03-truck-stops.seed.ts  04-sample-alerts.seed.ts  05-sample-notifications.seed.ts  06-reference-data.seed.ts  feature-flags.seed.ts  index.ts  loads.seed.ts  stops.seed.ts  truck-stops.seed.ts  utils.ts
apps/backend/scripts/: README.md  apply-migration.sh  cleanup-for-testing.ts  create-firebase-users.ts  create-super-admin.ts  db_seed.py  link-firebase-uids.ts  sync-samsara-mock.ts  update-rajat-to-owner.sql  update-rajat-to-owner.ts
apps/backend/src/: app.controller.ts  app.module.ts  main.ts
apps/backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  firebase-auth.service.spec.ts  firebase-auth.service.ts  jwt.service.ts
apps/backend/src/cache/: cache.module.ts
apps/backend/src/config/: configuration.ts  firebase.config.ts
apps/backend/src/database/: prisma.service.ts
apps/backend/src/health/: health.controller.ts
apps/backend/src/jobs/: auto-sync.job.ts
apps/backend/src/prisma/: prisma.service.ts
apps/backend/test/: README.md  integrations-phase2.e2e-spec.ts  integrations.e2e.spec.ts  jest-e2e.json
(+1579 files in other folders)
